--- a/index.html
+++ b/index.html
@@ -1016,10 +1016,11 @@ background-color: grey;
 
   <a href="#" class="btn btn-lg btn-primary cor btn-lg-square back-to-top"><i class="bi bi-arrow-up cor"></i></a>
 
-  <div class="container mt-3" style="background: white;" id="skills">
+  <div class=" mt-3" style="background: white;" id="skills">
   <div class="section-header">
     <p class="pcen sklu" id="proos"> Skills</p>
   </div>
+  <div class="container" style="background-color: gray;">
   <div class="row">
     <div class="p-3 col-lg-4 col-md-11 col-sm-11  wow fadeInUp" data-wow-delay="0.3s">
   <div class="card cr">
@@ -1086,6 +1087,7 @@ background-color: grey;
       </div>
       </div>
   </div>
+  </div>
 </div>
  <section id="gallery" class="gallery section-bg cott">
   <div class="container" data-aos="fade-up">
@@ -1147,8 +1149,9 @@ background-color: grey;
     </div>
   </div>
 </div>
-<div class="container mt-3" style="background-color: white;">
-    <span>Testamonials</span>
+<div class=" " style="background-color: white; width: 100%;">
+    <p style="text-align: center;">Testamonials</p>
+    <div class="container">
     <div class="row">
       <div class=" col-md-12 col-sm-12 col-lg-4">
 <figure class="snip1157 " >
@@ -1192,6 +1195,7 @@ background-color: grey;
 
   </div>
 </figure>
+</div>
 </div>
 </div>
 </div>
